--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body, html {
     color: #0f0;
     font-family: sans-serif;
     height: 100%;
+    overflow: hidden;
 }
 
 .game-container {
@@ -13,12 +14,16 @@ body, html {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    width: 100vmin;
+    height: 100vmin;
+    overflow: hidden;
 }
 
 canvas {
     border: 2px solid #0f0;
     image-rendering: pixelated;
+    width: 100%;
+    height: 100%;
 }
 
 #score {
