--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body, html {
 canvas {
     border: 2px solid #0f0;
     image-rendering: pixelated;
+    box-sizing: border-box;
     width: 100%;
     height: 100%;
 }
